@@ -1,3 +1,9 @@
+2006-10-25  Sebastian Delmont  <sd@notso.net>
+
+	* src/lib/rbosa.rb:
+	Made the OSA <-> Ruby conversion hooks open.
+	Patch was slightly modified by Laurent Sansonetti.
+
 2006-10-25  Aaron Patterson  <aaron.patterson@gmail.com>
 
 	* src/lib/rbosa.rb:
